--- a/bookapp-gateway-LB.yaml
+++ b/bookapp-gateway-LB.yaml
@@ -1,5 +1,5 @@
 apiVersion: networking.istio.io/v1alpha3
-kind: Gateway
+kind: Gateway                                 # external traffic
 metadata:
   name: bookinfo-gateway
 spec:
